# computational-methods

./: .gitignore  .matplotlibrc  1_boundary_value_problem.py  2_parabolic.py  3_hyperbolic.py  4_elliptic.py  README.md  hyperbolic_pde.py  main.py  parabolic_pde.py  pyproject.toml  util.py
.github/workflows/: ci.yaml
