[project]
name = "computational-methods"
version = "0.1.0"
description = "作业：科学与工程计算"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo>=0.9",
    "matplotlib>=3.9.2",
    "numpy>=2.1.1",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
]

[tool.ruff.lint]
extend-select = ["I", "TYP"]

[tool.ruff.format]
# For notebooks, use marimo to call ruff instead
exclude = ["[0123456789]*.py"]
